Refactor htmlHelpers file

--- a/style.css
+++ b/style.css
@@ -48,3 +48,6 @@ body, html {
 .card.purple.transparent {
     background-color: rgba(128, 0, 128, .2);
 }
+.card.selected {
+    font-weight: 900;
+}
